# nexus

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml
nexus/: __init__.py  version.py
nexus/cli/: cli.py  colors.py  elements.py
nexus/cli/config/: commands.py  get_command.py  list_command.py  reset_command.py  set_command.py
nexus/cli/service/: commands.py  init_command.py
nexus/core/: __init__.py  main.py
nexus/core/bot/: bot.py  manager.py
nexus/core/config/: __init__.py  toml.py  variables.py
nexus/core/exceptions/: generic.py  services.py
nexus/core/module/: __init__.py  manager.py  module.py
nexus/core/plugin/: manager.py  plugin.py
nexus/core/service/: register.py  service.py
nexus/modules/commands/: module.py
nexus/modules/permissions/: module.py
tests/core/config/: toml_test.py
tests/core/config/data/: test.toml
